src/posting/posting.scss
/* ... */
#response-headers-pane {
  height: 1fr;
  & ResponseHeadersTable {
    max-height: 1fr;
  }
}

#response-cookies-pane {
  height: 1fr;
  & CookiesSection {
    max-height: 1fr;
    PostingDataTable {
      display: block;
    }
    #empty-message {
      hatch: $empty-hatch;
      color: $text-muted;
      display: none;
    }
    &.empty {
      PostingDataTable {
        display: none;
      }
      #empty-message {
        display: block;
      }
    }

  }
}

Input {
  border: none;
  width: 1fr;
  &:focus {
      border: none;
      padding: 0 1;
  }
  &.error {
      border-left: thick $error;
  }
}

PostingRichLog {
  background: $surface 75%;
  padding-left: 1;
  &:focus {
    border-left: wide $accent;
    padding-left: 0;
  }
}


UrlBar {
  height: auto;
  padding: 0 3 0 3;

  & #main-row {
    height: 1;
  }

  & #method-selector {
      width: 11;
      height: 1;
      &:blur SelectCurrent {
        background: $primary-muted;
        #label {
          color: $text-primary;
        }
      }
  }

  & #response-status-code {
    width: 5;
    height: 1;
    padding: 0 1;
    display: none;
    &.-success {
      color: $text-success;
      background: $success-muted;
    }
    &.-warning {
      color: $text-warning;
      background: $warning-muted;
    }
    &.-error {
      color: $text-error;
      background: $error-muted;
    }
  }

  & #trace-markers {
      padding: 0 1;
      display: none;
      background: $surface;

      &.has-events {
          display: block;
          width: auto;
      }
  }
  & #variable-value-bar {
      width: 1fr;
      color: $text-muted;
      text-align: center;
      height: 1;
  }
  & .complete-marker {
      color: $success;
      background: $surface;
  }
  & .failed-marker {
      color: $error;
      background: $surface;
  }
  & .started-marker {
      color: $warning;
      background: $surface;
  }
  & .not-started-marker {
      color: $text-muted 30%;
      background: $surface;
  }
}

SendRequestButton {
  min-width: 8;
  background: $accent-muted;
  color: $text-accent;
  text-style: b;
  &:hover {
    background-tint: $text-accent 10%;
  }
}

KeyValueEditor {
  KeyValueInput {
    dock: bottom;
    height: auto;
    width: 1fr;

    #editing-row-label {
      display: none;
      padding: 0 1;
      height: 1;
      color: $text-accent;
    }
    #key-value-inputs {
      height: 1;
    }
    #row-writer-footer {
      height: auto;
    }
    &.edit-mode {
        background: $accent-muted;
        #editing-row-label {
          display: block;
        }
        #add-button {
            color: $text;
            background: $accent;
        }
        Input {
          background: $accent 10%;
        }
    }
    & Input {
        border: none;
        width: 1fr;
        margin: 0 1;
        padding: 0 1;
        &:focus {
          border: none;
          padding: 0 1;
        }
    }
  
    & Button {
        background: $primary;
        color: $text;
        text-style: none;
        min-width: 0;
        width: auto;
        margin: 0 1;
        &:hover {
            text-style: b;
            border: none;
            background: $primary-darken-1;
        }
    }
  }

  & PostingDataTable {
      display: block;
  }

  & #empty-message {
      display: none;
  }

  &.empty {
      & PostingDataTable {
          display: none;
      }
      & #empty-message {
          color: $text-muted;
          hatch: right $surface-lighten-1 70%;
          display: block;
      }
  }
}

CollectionBrowser {
  height: 1fr;
  dock: left;
  width: auto;
  max-width: 33%;

  & Tree {
      color: $foreground 80%;
      background: transparent;
      width: 1fr;
      &:focus {
        color: $foreground;
      }
  }

  #empty-collection-label {
     color: $text-muted;
     padding: 1 2;
     width: 24;
  }
}

TextArea {
  border: none;
  &:focus {
      border: none;
  }

  &.empty {
    & .text-area--cursor-line {
      background: transparent;
    }

    & .text-area--cursor-gutter {
      background: transparent;
    }
  }

  &#description-textarea {
    padding: 0;
    padding-left: 1;
    &:focus {
      border-left: outer $surface-lighten-1;
      padding: 0;
    }
  }
}



RequestMetadata {
  padding: 0 2;
  & Input {
      margin-bottom: 1;
  }
  & PostingTextArea {
      margin-bottom: 1;
  }
  & Button {
      dock: bottom;
      width: 1fr;
  }
  & #request-path {
      color: $text-muted;
      margin: 0;
      padding: 0;
      height: auto;
      max-height: 2;
  }
}

RequestEditor {
  & #request-body-type-select-container {
      dock: top;
      height: 1;
  }
  & #no-body-label {
      height: 1fr;
      hatch: $empty-hatch;
      color: $text-muted;
  }
}

RequestBodyTextArea {
  background: transparent;
}

ResponseTextArea {
  background: transparent;
}
/* ... */

